--- a/baselines/model_universal_sentence_encoder.ipynb
+++ b/baselines/model_universal_sentence_encoder.ipynb
@@ -69,7 +69,7 @@
     "for i, row in articles.iterrows():\n",
     "    \n",
     "    articles_id.append(row['page_id'])\n",
-    "    articles_title.append(row['page_title'])"
+    "    articles_title.append(row['page_title']+\" \"+row['meta_description'])"
    ]
   },
   {
@@ -124,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "89935it [00:10, 8580.37it/s]\n"
+      "89935it [00:06, 13505.45it/s]\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,14 +250,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1026/1026 [06:28<00:00,  2.89it/s]\n"
+      "100%|██████████| 1026/1026 [05:09<00:00,  3.18it/s]\n"
      ]
     }
    ],
@@ -267,7 +267,7 @@
     "average_top10 = []\n",
     "average_top20 = []\n",
     "\n",
-    "top_k = [1]\n",
+    "top_k = [1,5,10,20]\n",
     "\n",
     "for i in tqdm(range(len(article_dense_vector))):\n",
     "    \n",
@@ -306,14 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1579\n"
+      "0.1179\n",
+      "0.2193\n",
+      "0.2583\n",
+      "0.3002\n"
      ]
     }
    ],
