--- a/data_analysis/article_analysis.ipynb
+++ b/data_analysis/article_analysis.ipynb
@@ -551,6 +551,107 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#analysis test articles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_articles = pd.read_csv('../dataset/data_articles_test.csv', delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1026it [00:00, 4682.36it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "title_lenght = []\n",
+    "meta_description_lenght = []\n",
+    "\n",
+    "tknzr = TweetTokenizer()\n",
+    "\n",
+    "for i,row in tqdm(test_articles.iterrows()):\n",
+    "    \n",
+    "    title = row['page_title']\n",
+    "    meta_description = row['meta_description']\n",
+    "\n",
+    "    \n",
+    "    lenght_title = len(tknzr.tokenize(title))\n",
+    "    lenght_meta_description = len(tknzr.tokenize(meta_description))\n",
+    "    \n",
+    "    \n",
+    "    title_lenght.append(lenght_title)\n",
+    "    meta_description_lenght.append(lenght_meta_description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "title analysis:\n",
+      "max words = 22\n",
+      "min words = 1\n",
+      "avg words = 6.5682261208577\n",
+      "std words = 2.9560992176087293\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('title analysis:')\n",
+    "print(\"max words = \"+str(np.max(title_lenght)))\n",
+    "print(\"min words = \"+str(np.min(title_lenght)))\n",
+    "print(\"avg words = \"+str(np.mean(title_lenght)))\n",
+    "print(\"std words = \"+str(np.std(title_lenght)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "meta description analysis:\n",
+      "max words = 772\n",
+      "min words = 1\n",
+      "avg words = 20.537037037037038\n",
+      "std words = 35.482185253492354\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('meta description analysis:')\n",
+    "print(\"max words = \"+str(np.max(meta_description_lenght)))\n",
+    "print(\"min words = \"+str(np.min(meta_description_lenght)))\n",
+    "print(\"avg words = \"+str(np.mean(meta_description_lenght)))\n",
+    "print(\"std words = \"+str(np.std(meta_description_lenght)))"
+   ]
   }
  ],
  "metadata": {
