--- a/index_elastic_search/create_index_tables.ipynb
+++ b/index_elastic_search/create_index_tables.ipynb
@@ -91,11 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "distinc_tables = pd.read_csv('dataset/dataset_distinct_tables.csv', delimiter=',', keep_default_na=False)"
+    "distinc_tables = pd.read_csv('dataset/distinct_tables_allsignals.csv', delimiter=',', keep_default_na=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distinc_tables = distinc_tables.drop(distinc_tables[distinc_tables.table_page_title == \"\"].index)"
    ]
   },
   {
@@ -107,6 +116,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -114,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +140,10 @@
     "        \n",
     "        tablePgID = row['table_id']\n",
     "        tablePgTitle = row['table_page_title']\n",
+    "        tablePgFullText = row['table_page_full_text']\n",
+    "        tablePgMetaDescription = row['table_page_meta_description']\n",
+    "        tablePgSummary = row['table_page_summary']\n",
+    "        tablePgKeywords = row['table_page_keywords']\n",
     "        tableSectionTitle = row['table_section_title']\n",
     "        tableCaption = row['table_caption']\n",
     "        tableHeader = row['table_header']\n",
@@ -135,6 +155,10 @@
     "            \"_source\": {\n",
     "                \"tablePgID\": tablePgID,\n",
     "                \"tablePgTitle\": tablePgTitle,\n",
+    "                \"tablePgFullText\": tablePgFullText,\n",
+    "                \"tablePgMetaDescription\": tablePgMetaDescription,\n",
+    "                \"tablePgSummary\": tablePgSummary,\n",
+    "                \"tablePgKeywords\": tablePgKeywords,\n",
     "                \"tableSectionTitle\": tableSectionTitle,\n",
     "                \"tableCaption\": tableCaption,\n",
     "                \"tableHeader\": tableHeader,\n",
@@ -146,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +179,7 @@
        "{'acknowledged': True}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(89935, [])"
+       "(85900, [])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,6 +207,34 @@
    "source": [
     "helpers.bulk(indexing_distinct_tables, createIndexing())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
