--- a/model_title_summary/affinity_model_meta_description.ipynb
+++ b/model_title_summary/affinity_model_meta_description.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset_1_1 = pd.read_csv('dataset/train_model_070_200K.csv', delimiter=',')"
+    "train_dataset_1_1 = pd.read_csv('dataset/train_model_070_1M_meta_description.csv', delimiter=',')"
    ]
   },
   {
@@ -45,8 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# embedding_model = gs.models.FastText.load_fasttext_format('pre_trained_models/cc.en.300.bin')\n",
-    "embedding_model = gs.models.FastText.load('pre_trained_models/embedding_model_50d')"
+    "embedding_model = gs.models.FastText.load('train_embedding_models/fasttext_embedding_50d')"
    ]
   },
   {
@@ -62,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD = 31\n",
+    "MAX_PAD = 40\n",
     "\n",
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
@@ -109,13 +108,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_article_title = []\n",
+    "train_article_meta_description = []\n",
     "train_table_title = []\n",
     "train_label = []\n",
     "\n",
     "for i,row in tqdm(train_dataset.iterrows()):\n",
     "    \n",
-    "    train_article_title.append(create_embedding(row['article_title']))\n",
+    "    train_article_meta_description.append(create_embedding(row['article_meta_description']))\n",
     "    train_table_title.append(create_embedding(row['table_title']))\n",
     "    train_label.append(row['label'])"
    ]
@@ -126,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_article_title = np.array(train_article_title)\n",
+    "train_article_meta_description = np.array(train_article_meta_description)\n",
     "train_table_title = np.array(train_table_title)\n",
     "train_label = np.array(train_label)"
    ]
@@ -137,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_article_title.shape"
+    "train_article_meta_description.shape"
    ]
   },
   {
@@ -153,13 +152,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation_article_title = []\n",
+    "validation_article_meta_description = []\n",
     "validation_table_title = []\n",
     "validation_label = []\n",
     "\n",
     "for i, row in tqdm(validation_dataset.iterrows()):\n",
     "    \n",
-    "    validation_article_title.append(create_embedding(row['article_title']))\n",
+    "    validation_article_meta_description.append(create_embedding(row['article_title']))\n",
     "    validation_table_title.append(create_embedding(row['table_title']))  \n",
     "    validation_label.append(row['label'])"
    ]
@@ -170,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation_article_title = np.array(validation_article_title)\n",
+    "validation_article_meta_description = np.array(validation_article_meta_description)\n",
     "validation_table_title = np.array(validation_table_title)\n",
     "validation_label = np.array(validation_label)"
    ]
@@ -181,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation_article_title.shape"
+    "validation_article_meta_description.shape"
    ]
   },
   {
@@ -195,22 +194,8 @@
     "    transpose_document = tf.transpose(document,perm=[0, 2, 1])\n",
     "    \n",
     "    affinity = tf.matmul(query,transpose_document)\n",
-    "\n",
-    "    transpose_affinity = tf.transpose(affinity, perm=[0, 2, 1])\n",
     "    \n",
-    "    row_normalized = tf.nn.softmax(affinity, axis=1)\n",
-    "    \n",
-    "    column_normalized = tf.nn.softmax(transpose_affinity, axis=1)\n",
-    "    \n",
-    "    context_vector = tf.matmul(row_normalized,document)\n",
-    "    \n",
-    "    concatenate_context_query = tf.concat([context_vector,query],axis=-1)\n",
-    "     \n",
-    "    context_document = tf.matmul(column_normalized,concatenate_context_query)\n",
-    "    \n",
-    "    co_attention = tf.concat([document,context_document],axis=-1)\n",
-    "    \n",
-    "    return co_attention"
+    "    return affinity"
    ]
   },
   {
@@ -228,25 +213,23 @@
    "source": [
     "def attention_model():\n",
     "    \n",
-    "    article_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
-    "    table_title = tf.keras.Input(shape=(31,50), dtype='float32')\n",
+    "    article_meta_description = tf.keras.Input(shape=(40,50), dtype='float32')\n",
+    "    table_title = tf.keras.Input(shape=(40,50), dtype='float32')\n",
     "    \n",
-    "    encodding_article_title = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(article_title)\n",
+    "    encodding_article_meta_description = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(article_meta_description)\n",
     "    encodding_table_title = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(table_title)\n",
     "    \n",
-    "    attention_title_title = coattention_method(encodding_article_title,encodding_table_title)\n",
+    "    attention_meta_title = coattention_method(encodding_article_meta_description,encodding_table_title)\n",
     "    \n",
-    "    encodding_attention = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(attention_title_title)\n",
+    "    encodding_attention = tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32, return_sequences=True))(attention_meta_title)\n",
     "    \n",
     "    learned_vector = tf.keras.layers.Flatten()(encodding_attention)\n",
     "   \n",
     "    dense1 = tf.keras.layers.Dense(64, activation='relu')(learned_vector)\n",
     "    dropout1 = tf.keras.layers.Dropout(0.5, name=\"dropout1\")(dense1)\n",
-    "#     dense2 = tf.keras.layers.Dense(64, activation='relu')(dropout1)\n",
-    "#     dropout2 = tf.keras.layers.Dropout(0.5, name=\"dropout2\")(dense2)\n",
     "    prediction = tf.keras.layers.Dense(1,activation='sigmoid')(dropout1)\n",
     "    \n",
-    "    model = tf.keras.Model(inputs=[article_title,table_title],outputs=prediction)\n",
+    "    model = tf.keras.Model(inputs=[article_meta_description,table_title],outputs=prediction)\n",
     "    \n",
     "    return model"
    ]
@@ -275,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint = tf.keras.callbacks.ModelCheckpoint('GRU_affinity_model_070_200k_fit_fasttext.h5', monitor='val_acc',verbose=1, save_the_best_only=True, mode='max')\n",
+    "checkpoint = tf.keras.callbacks.ModelCheckpoint('GRU_affinity_model_070_1M_meta_description.h5', monitor='val_acc',verbose=1, save_the_best_only=True, mode='max')\n",
     "callbacks_list = [checkpoint]"
    ]
   },
@@ -285,10 +268,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = model.fit([train_article_title, train_table_title], train_label, \n",
+    "history = model.fit([train_article_meta_description, train_table_title], train_label, \n",
     "          epochs=10, \n",
     "          batch_size=32, \n",
-    "          validation_data=([validation_article_title, validation_table_title], validation_label),\n",
+    "          validation_data=([validation_article_meta_description, validation_table_title], validation_label),\n",
     "          callbacks=callbacks_list)"
    ]
   },
@@ -368,13 +351,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import seaborn as sns\n",
     "import sklearn.metrics\n",
@@ -386,35 +362,6 @@
     "plt.ylabel('True label')\n",
     "plt.xlabel('Predict label')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# count = 0\n",
-    "# wrong = []\n",
-    "# for i in range(len(validation_label)):\n",
-    "    \n",
-    "#     if validation_label[i] != y_predict[i]:\n",
-    "#         if validation_label[i] == 1:\n",
-    "#             wrong.append(i)\n",
-    "#             count = count + 1\n",
-    "            \n",
-    "# print(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i in wrong:\n",
-    "#     print(validation_dataset.iloc[i]['article_title'],\" - \",validation_dataset.iloc[i]['table_title'])\n",
-    "#     print(\"\")"
    ]
   },
   {
