--- a/model_title_summary/table_retrieval_meta_description.ipynb
+++ b/model_title_summary/table_retrieval_meta_description.ipynb
@@ -52,19 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# embedding_model = gs.models.FastText.load_fasttext_format('pre_trained_models/cc.en.300.bin')\n",
-    "embedding_model = gs.models.FastText.load('pre_trained_models/embedding_model_50d')"
+    "embedding_model = gs.models.FastText.load('train_embedding_models/fasttext_embedding_50d')"
    ]
   },
   {
@@ -141,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD = 31\n",
+    "MAX_PAD = 40\n",
     "\n",
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
@@ -214,7 +206,7 @@
     }
    ],
    "source": [
-    "ranking_model = tf.keras.models.load_model('GRU_affinity_model_070_200k_fit_fasttext.h5')"
+    "ranking_model = tf.keras.models.load_model('GRU_affinity_model_070_1M_meta_description.h5')"
    ]
   },
   {
@@ -240,7 +232,7 @@
     "    for i, row in tqdm(test_articles.iterrows()):\n",
     "        \n",
     "        article_ID = row['page_id']\n",
-    "        article_title_text = row['page_title']\n",
+    "        article_title_text = row['meta_description']\n",
     "       \n",
     "        article_title = []\n",
     "        title_table = []\n",
@@ -291,10 +283,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1026it [01:08, 17.22it/s]\n",
-      "1026it [01:01, 17.51it/s]\n",
-      "1026it [01:00, 17.34it/s]\n",
-      "1026it [01:00, 17.19it/s]\n"
+      "1026it [01:09, 14.81it/s]\n",
+      "1026it [01:10, 14.58it/s]\n",
+      "1026it [01:10, 14.63it/s]\n",
+      "1026it [01:09, 14.77it/s]\n"
      ]
     }
    ],
@@ -314,10 +306,10 @@
     {
      "data": {
       "text/plain": [
-       "[['Acc@1', '0.3304'],\n",
-       " ['Acc@5', '0.3666'],\n",
-       " ['Acc@10', '0.391'],\n",
-       " ['Acc@20', '0.4135']]"
+       "[['Acc@1', '0.2874'],\n",
+       " ['Acc@5', '0.3177'],\n",
+       " ['Acc@10', '0.3382'],\n",
+       " ['Acc@20', '0.3685']]"
       ]
      },
      "execution_count": 14,
