--- a/baselines/model_doc2vec.ipynb
+++ b/baselines/model_doc2vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,18 +35,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lss9/anaconda3/lib/python3.7/site-packages/smart_open/smart_open_lib.py:402: UserWarning: This function is deprecated, use smart_open.open instead. See the migration notes for details: https://github.com/RaRe-Technologies/smart_open/blob/master/README.rst#migrating-to-the-new-open-function\n",
+      "  'See the migration notes for details: %s' % _MIGRATION_NOTES_URL\n"
+     ]
+    }
+   ],
    "source": [
     "embedding_model = Doc2Vec.load('pre_trained_models/doc2vec.bin')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "89935it [01:09, 1286.63it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "tables_vector = []\n",
     "tables_ids = []\n",
@@ -71,16 +88,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1026it [00:01, 623.34it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "articles_ids = []\n",
     "articles_vector = []\n",
     "\n",
     "for i, row in tqdm(articles.iterrows()):\n",
     "    \n",
-    "    article_page_title = row['page_title']\n",
+    "    article_page_title = row['page_title']+\" \"+row['meta_description']\n",
     "         \n",
     "    #embedding\n",
     "    vector_words = tknzr.tokenize(article_page_title)\n",
@@ -99,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,9 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1026/1026 [04:29<00:00,  4.21it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "AverageTop1 = []\n",
     "AverageTop5 = []\n",
@@ -166,7 +199,7 @@
     "    \n",
     "    idQueryGoal = articles_ids[i]\n",
     "    \n",
-    "    distance_vector = pairwise_distances(articles_vector[i].reshape(1,50), tables_vector, metric='cosine')\n",
+    "    distance_vector = pairwise_distances(articles_vector[i].reshape(1,300), tables_vector, metric='cosine')\n",
     "    \n",
     "    #creating the dataframe\n",
     "    all_tables_score = []\n",
@@ -199,9 +232,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1355\n",
+      "0.2446\n",
+      "0.3031\n",
+      "0.3606\n"
+     ]
+    }
+   ],
    "source": [
     "print(str(round(np.mean(AverageTop1),4)))\n",
     "print(str(round(np.mean(AverageTop5),4)))\n",
