--- a/baselines/model_elasticsearch_tfidf_bm25.ipynb
+++ b/baselines/model_elasticsearch_tfidf_bm25.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'acknowledged': True, 'shards_acknowledged': True}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
     "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +70,14 @@
     "        body = {\n",
     "        \"_source\": [\"tablePgID\"],\n",
     "        \"from\" : 0,\n",
-    "        \"size\" : 1000,\n",
+    "        \"size\" : 300,\n",
     "        \"query\": {\n",
     "            \"multi_match\":{\n",
     "              \"type\": \"most_fields\",\n",
     "              \"query\":    query, \n",
     "              #\"fields\": [\"tablePgTitle\"] \n",
-    "              #\"fields\": [\"tablePgTitle\",\"tableHeader\",\"tableBody\"] \n",
-    "              \"fields\": [tableField]\n",
+    "              \"fields\": [\"tablePgTitle\",\"tablePgFullText\"] \n",
+    "              #\"fields\": [tableField]\n",
     "            }\n",
     "        }\n",
     "    })\n",
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,14 +96,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>full_text</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>meta_description</th>\n",
+       "      <th>meta_keywords</th>\n",
+       "      <th>page_id</th>\n",
+       "      <th>page_title</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>when comes pioneers progressive rock handful b...</td>\n",
+       "      <td>faces anderson album chris jon went record tre...</td>\n",
+       "      <td>yes among year rock roll hall fame inductees c...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4125505</td>\n",
+       "      <td>rock roll hall famers jon anderson trevor rabi...</td>\n",
+       "      <td>because good photos the best yes album coverss...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           full_text  \\\n",
+       "0  when comes pioneers progressive rock handful b...   \n",
+       "\n",
+       "                                            keywords  \\\n",
+       "0  faces anderson album chris jon went record tre...   \n",
+       "\n",
+       "                                    meta_description meta_keywords  page_id  \\\n",
+       "0  yes among year rock roll hall fame inductees c...           NaN  4125505   \n",
+       "\n",
+       "                                          page_title  \\\n",
+       "0  rock roll hall famers jon anderson trevor rabi...   \n",
+       "\n",
+       "                                             summary tags  \n",
+       "0  because good photos the best yes album coverss...  NaN  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "articles.head(1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,9 +185,9 @@
     "    for i,row in (articles.iterrows()):\n",
     "\n",
     "        articl_key = row['page_id']\n",
-    "        article_title = row['page_title'] +\" \"+row['meta_description']\n",
+    "        query = row['page_title']+\" \"+row['meta_description']\n",
     "\n",
-    "        result = search_indexing(article_title,tableField)\n",
+    "        result = search_indexing(query,tableField)\n",
     "\n",
     "        if result['hits']['total'] > 0:\n",
     "\n",
@@ -133,12 +215,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tableField = [\"tablePgTitle\"]\n",
-    "tableField = [\"tablePgTitle\",\"tableSectionTitle\",\"tableCaption\",\"tableHeader\",\"tableBody\"]\n",
+    "tableField = [\"tablePgTitle\",\"tablePgFullText\",\"tablePgSummary\",\"tablePgKeywords\",\"tableSectionTitle\",\"tableCaption\",\"tableHeader\",\"tableBody\"]\n",
     "topK = [1,5,10,20,100]"
    ]
   },
@@ -161,15 +242,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acc@1\n",
+      "0.2885\n",
+      "Acc@5\n",
+      "0.4084\n",
+      "Acc@10\n",
+      "0.4581\n",
+      "Acc@20\n",
+      "0.4922\n",
+      "Acc@100\n",
+      "0.577\n"
+     ]
+    }
+   ],
    "source": [
-    "# for k in topK:\n",
+    "for k in topK:\n",
     "    \n",
-    "#     print(\"Acc@\"+str(k))\n",
+    "    print(\"Acc@\"+str(k))\n",
     "    \n",
-    "#     execute_search(\"\",k)"
+    "    execute_search(\"\",k)"
    ]
   },
   {
