--- a/baselines/model_doc2vec.ipynb
+++ b/baselines/model_doc2vec.ipynb
@@ -22,8 +22,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "articles = pd.read_csv('dataset/data_articles_test.csv', delimiter=',', keep_default_na=False)\n",
-    "tables = pd.read_csv('dataset/dataset_distinct_tables.csv', delimiter=',', keep_default_na=False)"
+    "articles = pd.read_csv('../dataset/data_articles_test.csv', delimiter=',', keep_default_na=False)\n",
+    "\n",
+    "tables = pd.read_csv('../dataset/distinct_tables_allsignals.csv', delimiter=',', keep_default_na=False)\n",
+    "tables = tables.drop(tables[tables.table_page_title == \"\"].index)"
    ]
   },
   {
@@ -48,7 +50,7 @@
     }
    ],
    "source": [
-    "embedding_model = Doc2Vec.load('pre_trained_models/doc2vec.bin')"
+    "embedding_model = Doc2Vec.load('../pre_trained_models/doc2vec.bin')"
    ]
   },
   {
@@ -60,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "89935it [01:09, 1286.63it/s]\n"
+      "85900it [01:27, 981.60it/s] \n"
      ]
     }
    ],
@@ -95,7 +97,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1026it [00:01, 623.34it/s]\n"
+      "1026it [00:01, 847.47it/s]\n"
      ]
     }
    ],
@@ -105,7 +107,7 @@
     "\n",
     "for i, row in tqdm(articles.iterrows()):\n",
     "    \n",
-    "    article_page_title = row['page_title']+\" \"+row['meta_description']\n",
+    "    article_page_title = row['page_title']\n",
     "         \n",
     "    #embedding\n",
     "    vector_words = tknzr.tokenize(article_page_title)\n",
@@ -183,7 +185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1026/1026 [04:29<00:00,  4.21it/s]\n"
+      "100%|██████████| 1026/1026 [04:52<00:00,  3.52it/s]\n"
      ]
     }
    ],
@@ -239,10 +241,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1355\n",
-      "0.2446\n",
-      "0.3031\n",
-      "0.3606\n"
+      "0.2018\n",
+      "0.2885\n",
+      "0.3236\n",
+      "0.3587\n"
      ]
     }
    ],
