--- a/model_title/table_retrieval_title.ipynb
+++ b/model_title/table_retrieval_title.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,31 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.0.0-rc0'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tf.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_articles = pd.read_csv('dataset/data_articles_test.csv', delimiter=',')"
+    "test_articles = pd.read_csv('../dataset/data_articles_test.csv', delimiter=',')"
    ]
   },
   {
@@ -59,30 +48,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# embedding_model = gs.models.FastText.load_fasttext_format('pre_trained_models/cc.en.300.bin')\n",
-    "embedding_model = gs.models.FastText.load('train_embedding_models/fasttext_embedding_50d_all_signals')"
+    "embedding_model = gs.models.FastText.load('../train_embedding_models/fasttext_embedding_50d_all_signals')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'acknowledged': True, 'shards_acknowledged': True}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "indexing_distinct_tables.indices.close(index='distinct_tables')\n",
     "indexing_distinct_tables.indices.put_settings(index='distinct_tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
@@ -91,7 +69,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"tablePgID\"\n",
+    "# \"tablePgTitle\"\n",
+    "# \"tablePgFullText\"\n",
+    "# \"tablePgMetaDescription\"\n",
+    "# \"tablePgSummary\"\n",
+    "# \"tablePgKeywords\"\n",
+    "# \"tableSectionTitle\"\n",
+    "# \"tableCaption\"\n",
+    "# \"tableHeader\"\n",
+    "# \"tableBody\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,21 +196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ranking_model = tf.keras.models.load_model('affinity_model_train_cossine.h5')"
+    "ranking_model = tf.keras.models.load_model('antigo_coaffinity_model_title_08_0.9979.h5')"
    ]
   },
   {
@@ -222,11 +208,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_articles.head(1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +229,7 @@
     "        \n",
     "        article_ID = row['page_id']\n",
     "        article_title_text = row['page_title']\n",
-    "        query = row['keywords']\n",
+    "        query = row['page_title']+\" \"+row['meta_description']+\" \"+row['keywords']\n",
     "        \n",
     "        article_title = []\n",
     "        title_table = []\n",
@@ -254,13 +242,11 @@
     "            article_title_embedding = create_embedding(article_title_text)\n",
     "            \n",
     "            for table_ID, table_title in (ranked_tables_index):\n",
-    "                \n",
-    "                if table_title != \"\":\n",
     "                    \n",
-    "                    table_title_embedding = create_embedding(str(table_title))\n",
+    "                table_title_embedding = create_embedding(str(table_title))\n",
     "\n",
-    "                    article_title.append(article_title_embedding)\n",
-    "                    title_table.append(table_title_embedding)\n",
+    "                article_title.append(article_title_embedding)\n",
+    "                title_table.append(table_title_embedding)\n",
     "\n",
     "            article_title = np.array(article_title)\n",
     "            title_table = np.array(title_table)\n",
@@ -272,14 +258,14 @@
     "                ranked_tables_model.append([ranked_tables_index[i][0],ranked_tables_index[i][1],table_ranking_model[i][0]]) \n",
     "\n",
     "            data_frame = pd.DataFrame(ranked_tables_model, columns = ['table_ID', 'table_title','table_ranking']) \n",
-    "            data_frame_sorting = data_frame.sort_values('table_ranking', ascending=False)\n",
+    "            data_frame_sorting = data_frame.sort_values('table_ranking', ascending=False)   \n",
     "#             final_ranked_tables = data_frame_sorting.iloc[0:TOP_K,0:1].values\n",
     "            \n",
     "            selected_top = data_frame_sorting.head(TOP_K)\n",
     "            min_score = selected_top['table_ranking'].min()\n",
     "            draw_tables_socres = data_frame_sorting[data_frame_sorting['table_ranking'] >= min_score]\n",
     "            final_ranked_tables = draw_tables_socres.iloc[:,0:1].values\n",
-    "\n",
+    "        \n",
     "            accuracy.append(get_accuracy(article_ID, final_ranked_tables))\n",
     "\n",
     "    result.append([\"Acc@\"+str(k),str(round(np.mean(accuracy),4))])"
@@ -287,20 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1026it [05:15,  2.93it/s]\n",
-      "1026it [05:10,  3.25it/s]\n",
-      "1026it [05:15,  3.00it/s]\n",
-      "1026it [05:11,  3.18it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "accuracy_K = [1,5,10,20]\n",
     "\n",
@@ -311,23 +286,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Acc@1', '0.3684'],\n",
-       " ['Acc@5', '0.4006'],\n",
-       " ['Acc@10', '0.4318'],\n",
-       " ['Acc@20', '0.4893']]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result"
    ]
