--- a/baselines/model_universal_sentence_encoder.ipynb
+++ b/baselines/model_universal_sentence_encoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "articles = pd.read_csv('dataset/data_articles_test.csv', delimiter=',', keep_default_na=False)\n",
-    "tables = pd.read_csv('dataset/dataset_distinct_tables.csv', delimiter=',', keep_default_na=False)"
+    "articles = pd.read_csv('../dataset/data_articles_test.csv', delimiter=',', keep_default_na=False)\n",
+    "\n",
+    "tables = pd.read_csv('../dataset/distinct_tables_allsignals.csv', delimiter=',', keep_default_na=False)\n",
+    "tables = tables.drop(tables[tables.table_page_title == \"\"].index)"
    ]
   },
   {
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,12 +71,12 @@
     "for i, row in articles.iterrows():\n",
     "    \n",
     "    articles_id.append(row['page_id'])\n",
-    "    articles_title.append(row['page_title']+\" \"+row['meta_description'])"
+    "    articles_title.append(row['page_title'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,17 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "89935it [00:06, 13505.45it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tables_title = []\n",
     "tables_ids = []\n",
@@ -140,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,17 +244,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1026/1026 [05:09<00:00,  3.18it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "average_top1 = []\n",
     "average_top5 = []\n",
@@ -306,20 +292,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.1179\n",
-      "0.2193\n",
-      "0.2583\n",
-      "0.3002\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(str(round(np.mean(average_top1),4)))\n",
     "print(str(round(np.mean(average_top5),4)))\n",
